sql schema added and postgresql config added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=exercice
+spring.datasource.url=jdbc:postgresql://localhost:5432/okayo_db
+spring.datasource.username=okayo
+spring.datasource.password=okayo
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.mode=always
