--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=exercice
-spring.datasource.url=jdbc:postgresql://localhost:5432/okayo_db
+//spring.datasource.url=jdbc:postgresql://localhost:5432/okayo_db
+spring.datasource.url=jdbc:postgresql://db:5432/okayo_db
+
 spring.datasource.username=okayo
 spring.datasource.password=okayo
 
