Enable virtual threads in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=exercice
+spring.threads.virtual.enabled=true
 //spring.datasource.url=jdbc:postgresql://localhost:5432/okayo_db
 spring.datasource.url=jdbc:postgresql://db:5432/okayo_db
 
